--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    box-sizing: border-box;
+    background-color: #3333;
+    font-family: sans-serif;
+    font-size: 20px;
+}
 .culomn{
     column-count: 4;
     column-rule: solid 2px;
